# rust-stm32-example

./: .gitignore  Cargo.toml  README.md  run-hello.sh
STM32L15x/: layout.ld
STM32L15x/src/: lang_items.rs  main.rs
src/: main.rs
stm32l15x/: Cargo.toml
stm32l15x/.cargo/: config
stm32l15x/src/: exceptions.rs
